- Fixed gap between footer & body; made campground tile section scrollable

--- a/app/assets/stylesheets/camgrounds_index.scss
+++ b/app/assets/stylesheets/camgrounds_index.scss
@@ -77,6 +77,11 @@ div.menu.filter-section li {
   background-color: #F7F9FB;
 }
 
+.index-scrollable {
+  height: 100vh; /* or any value */
+  overflow-y: auto;
+}
+
 // Campground Tiles
 div.campground-tile {
   margin: 10px;
